Add one more blurb

--- a/bid.tex
+++ b/bid.tex
@@ -152,6 +152,9 @@ This research seeks to design and control a walking four-legged robot with a fle
 \website{http://valkyriesavage.com}
 Digital fabrication tools like 3D printers and laser cutters are often used in the process of prototyping interactive objects. However, they are often used to make static parts, like cases or mounts. We have developed a framework linking pre-fabrication digital geometry and knowledge of fabricated material properties to desired sensing techniques; thus we can leverage 3D printed plastics or vinyl-cut foils directly as senseable elements. We call this ``Fabbing to Sense'', and over the course of my research we have developed three instances of this technique: Midas [UIST12], Lamello [CHI15], and Sauron [UIST13].
 
+\vspace{12pt}
+Latest update: \today %place here for balancing
+
 \subsection{Identify Misunderstanding in Students and Delivering Guidance to Fix Them}
 \name{Kristin Stephens-Martinez}
 \email{ksteph@cs.berkeley.edu}
@@ -164,13 +167,16 @@ We propose a model that uses student incorrect constructed responses to identify
 \website{http://rundongtian.com}
 In 2012, air pollution in both cities and rural areas was estimated to have caused 3.7 million premature deaths. The primary pollutant was small airborne particulate matter of 10 microns or less in diameter, which led to the development of cardiovascular and respiratory diseases. In response, we developed MyPart, the first personal, portable, and accurate particle sensor with a bill of materials under \$50. We demonstrate how MyPart offers substantial enhancements over most existing air particle sensors by improving accessibility, flexibility, portability, and accuracy.
 
+\subsection{Digital Fabrication Aesthetics}
+\name{Cesar Torres}
+\email{cearto@berkeley.edu}
+\website{http://cearto.com}
+Creative design tools have tremendous potential to support, inform, and influence the things we make. My research investigates how digital fabrication can benefit from such expressive tools and expand aesthetic and creative inquiry.
+
 \subsection{Investigation of Impact Characteristics of Tensegrity Structures}
 \name{Edward Zhu}
 \email{edward.zhu@berkeley.edu}
 \nowebsite{}
 Due to their unique compliance, tensegrity structures are capable of absorbing large amounts of energy upon impact. This allows for robustness in the deployment process during planetary exploration. My research will further investigate the behavior of tensegrity structures in different impact scenarios in order to improve its survivability in different landing situations.
-
-\vspace{12pt}
-Latest update: \today
 
 \end{document}
